--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -12,7 +12,6 @@
 
   .slick-list {
     width: 1435px;
-    position: relative;
   }
 
   .background-spacing {
